@@ -11,6 +11,11 @@
 	* gdb.cp/nextoverthrow.exp: Skip test if debug info for
 	_Unwind_DebugHook is missing.
 
+2011-11-11  Keith Seitz  <keiths@redhat.com>
+
+        PR gdb/12843
+        * gdb.base/linespecs.exp: New file.
+
 2011-11-11  Doug Evans  <dje@google.com>
 
 	* gdb.threads/print-threads.exp: Extend timeout for slower
